--- a/src/assets/css/Join.css
+++ b/src/assets/css/Join.css
@@ -9,7 +9,7 @@ button {
     margin-top: 30px;
     margin-bottom: 30px;
     color: white;
-
+    outline: none;
 }
 
 button:hover {
@@ -18,7 +18,7 @@ button:hover {
 }
 
 #main {
-    margin-top:100px;
+    margin-top: 100px;
     padding: 100px;
     margin: auto;
     width: 50%;
