--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -1,16 +1,84 @@
 #playArea {
     background-color: gray;
-    display: flexbox;
+    display: flex;
+    flex-direction: column;
+
 }
 
 #right {
-    background-color: blue;
-    width: 50%;
+    /* background-color: blue; */
+
+    width: 30%;
     display: inline-block;
+    flex: 1;
+
 }
 
 #left {
-    background-color: red;
-    width: 50%;
+    flex: 1;
+    /* background-color: red; */
+
+    width: 70%;
     display: inline-block;
+}
+#FlashcardHint {
+    width: 100% - 60px;
+    height: 50vh !important;
+    margin: auto;
+    margin: 30px;
+    margin-top: 0px;
+    /* border: 1px solid black; */
+    box-shadow: 0px 0px 10px #00000077;
+}
+
+#log {
+    border: 1px solid black;
+    width: 20%;
+    height: 50vh;
+    margin: auto;
+    position: absolute;
+    bottom: 75px;
+
+}
+
+#timer {
+    border: 1px solid black;
+    width: 20%;
+    height: 20vh;
+    /* position: absolute; */
+    position: absolute;
+    top: 75px;
+    margin: auto;
+}
+
+#answerInput {
+    outline: none;
+    border: 1px solid #999;
+    padding: 5px;
+    border-radius: 20px;
+    padding-left: 15px;
+}
+
+#submit {
+
+    outline: none;
+    margin: 5px;
+    border-radius: 20px;
+    border: 1px solid #409EFF;
+    background-color: #409EFF;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: inline;
+    transition: all 0.3s;
+
+}
+
+#submit:hover {
+    transition: all 0.3s;
+    background-color: #66b1ff;
+}
+
+#form {
+    margin-top: 10%;
 }
