--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -26,7 +26,7 @@
     height: 50vh !important;
     margin: auto;
     margin: 30px;
-    margin-top: 0px;
+    /* margin-top: 0px; */
     /* border: 1px solid black; */
     box-shadow: 0px 0px 10px #00000077;
 }
