--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -26,29 +26,35 @@
     height: 50vh !important;
     margin: auto;
     margin: 30px;
+    box-shadow: 0px 0px 10px #00000077;
+    border-radius: 2px;
     /* margin-top: 0px; */
     /* border: 1px solid black; */
-    box-shadow: 0px 0px 10px #00000077;
+
 }
 
 #log {
-    border: 1px solid black;
+    /* border: 1px solid bla    ck; */
     width: 20%;
     height: 50vh;
     margin: auto;
     position: absolute;
     bottom: 75px;
+    box-shadow: 0px 0px 5px #00000077;
+    border-radius: 2px;
 
 }
 
 #timer {
-    border: 1px solid black;
+    /* border: 1px solid #999; */
     width: 20%;
     height: 20vh;
     /* position: absolute; */
     position: absolute;
     top: 75px;
     margin: auto;
+    box-shadow: 0px 0px 5px #00000077;
+    border-radius: 2px;
 }
 
 #answerInput {
