--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -88,3 +88,22 @@
 #form {
     margin-top: 10%;
 }
+
+#test {
+    z-index: 100;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #000000bb;
+    color: white;
+    font-size: 50px;
+}
+
+#test p {
+    font-size: 25px;
+    width: 20%;
+    margin: auto;
+
+}
