--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -33,8 +33,16 @@
     margin: 30px;
     box-shadow: 0px 0px 10px #00000077;
     border-radius: 2px;
+    font-size: 3vw;
+    vertical-align: middle;
+    text-align: center;
+    padding-top:12vh;
     /* margin-top: 0px; */
     /* border: 1px solid black; */
+}
+
+#FlashcardHint {
+    text-align: center;
 }
 
 #log {
