minor css fixes

--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -95,6 +95,7 @@
     border-radius: 20px;
     border: 1px solid #409EFF;
     background-color: #409EFF;
+    color: white;
     padding: 5px;
     padding-left: 10px;
     padding-right: 10px;
