css is now consistent-ish

--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -101,7 +101,7 @@
     display: flex;
 }
 
-#submit {
+.submit {
     outline: none;
     margin: 5px;
     border-radius: 20px;
@@ -115,7 +115,7 @@
     transition: all 0.3s;
 }
 
-#submit:hover {
+.submit:hover {
     transition: all 0.3s;
     background-color: #66b1ff;
 }
@@ -153,7 +153,29 @@
 }
 
 #dropdown {
-    width: 50px;
+    align-self: center;
+    width: 150px !important;
     display: block;
     margin-top: 10px;
+    padding: 5px;
+    border-radius: 15px;
+    outline: none;
+    background-color: white;
+}
+
+#dropdown-options {
+    background-color: white;
+    padding: 5px;
+    border-radius: 0px;
+}
+
+#dropdown-options:last-of-type {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+#dropdown:active {
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+
 }
