--- a/src/assets/css/Collection.css
+++ b/src/assets/css/Collection.css
@@ -17,3 +17,30 @@
 li {
     list-style-type: none;
 }
+
+input[type="text"] {
+    outline: none;
+    border: 1px solid #999;
+    padding: 5px;
+    border-radius: 20px;
+    padding-left: 15px;
+    margin: 5px;
+}
+.submit {
+    outline: none;
+    margin: 5px;
+    border-radius: 20px;
+    border: 1px solid #409EFF;
+    background-color: #409EFF;
+    color: white;
+    padding: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: inline;
+    transition: all 0.3s;
+}
+
+.submit:hover {
+    transition: all 0.3s;
+    background-color: #66b1ff;
+}
