--- a/src/assets/css/Play.css
+++ b/src/assets/css/Play.css
@@ -135,6 +135,21 @@
     margin-top: 10%;
 }
 
+#leaderParent {
+    display: flex;
+}
+
+#left-small {
+    width: 50%;
+    display: inline;
+        flex: 1;
+}
+#right-small {
+    display: inline;
+    flex: 1;
+    width: 50%;
+}
+
 #host-controls {
     display: none;
     z-index: 100;
